# LearningCode

./: .gitignore
CreateSharedLibs/CreateLib/: CMakeLists.txt
CreateSharedLibs/CreateLib/include/: MathFunctions.h
CreateSharedLibs/CreateLib/src/: MathFunctions.cpp
CreateSharedLibs/UseLib/: CMakeLists.txt
CreateSharedLibs/UseLib/src/: main.cpp
VTK/: BuildAndUseVTK.md
VTK/createShared/: CMakeLists.txt
VTK/createShared/include/: vtkInterpolate.h
VTK/createShared/src/: vtkInterpolate.cpp
VTK/interpolateLegacyVTK/: CMakeLists.txt
VTK/interpolateLegacyVTK/src/: CMakeLists.txt  main.cpp  vtkInterpolate.cpp
VTK/interpolateLegacyVTK/src/include/: vtkInterpolate.h
VTK/sphere/src/: CMakeLists.txt  Sphere.cxx
